--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -35,6 +35,8 @@ jobs:
 
         - name: Set up Terraform with specified version on the runner
           uses: hashicorp/setup-terraform@v2
+          with: 
+            terraform_version: 1.6.3
 
         - name: Terraform init 
           id: init 
